--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,10 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+    }
+
+    dataBinding {
+        enabled true
     }
 }
 
