--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.randomtodaylaunch">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,7 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_food_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RandomTodayLaunch">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.RandomTodayLaunch"
+        tools:targetApi="n">
         <activity
             android:name=".ui.DetailActivity"
             android:exported="false" />
