--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,11 +11,11 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.randomtodaylaunch"
+        applicationId "com.hoya.randomtodaylaunch"
         minSdk 21
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
