--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         applicationId "com.hoya.randomtodaylaunch"
         minSdk 21
         targetSdk 32
-        versionCode 2
+        versionCode 3
         versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -58,4 +58,8 @@ dependencies {
     implementation("androidx.room:room-runtime:$room_version")
     kapt "androidx.room:room-compiler:$room_version"
     implementation("androidx.room:room-ktx:$room_version")
+
+    // Open source Tabsync
+    implementation 'io.github.ahmad-hamwi:tabsync:1.0.1'
+
 }
